<resources>
    <string name="app_name">Wisdom Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quiz_master">QuizMaster</string>
    <string name="title_activity_quiz_taker">QuizTaker</string>
    <string name="title_activity_manage_quiz_taker">ManageQuizTaker</string>
    <string name="title_activity_do_quiz">DoQuiz</string>
    <string name="welcome">Welcome to Wisdom Quiz!</string>
    <string name="loginAs">Login as:</string>
    <string name="qm">Quiz Master</string>
    <string name="qt">Quiz Taker</string>
    <string name="welcomeQM">Hello Quiz Master, please choose:</string>
    <string name="mtt">Manage Test Taker</string>
    <string name="mq" />
    <string name="mq1">Add/Delete Quiz</string>
    <string name="setUser">Please set up a Test Taker</string>
    <string name="UerID">UerID</string>
    <string name="idHint">enter userID here</string>
    <string name="passwordHint">enter password here</string>
    <string name="password">Password</string>
    <string name="setTime">Please set a timer for each question</string>
    <string name="second">s</string>
    <string name="setSecond">%ds</string>
    <string name="minTime">10s</string>
    <string name="maxTime">30s</string>
    <string name="saveAndBack">Save and back</string>
    <string name="login">Please use your userId and password given by Quiz Master to login</string>
    <string name="login1">Login</string>
    <string name="title_activity_add_quiz">AddQuizActivity</string>
    <string name="addQuiz">You are ready to add a new quiz</string>
    <string name="addQuestion">Add Question:</string>
    <string name="addQuestions">Add Questions here</string>
    <string name="addA">Add option A</string>
    <string name="addB">Add option B</string>
    <string name="addC">Add option C</string>
    <string name="addD">Add Option D</string>
    <string name="rightAnswer">The right Answer is:</string>
    <string name="submitNewQuiz">Submit new quiz</string>
    <string name="question0">Question 0 of 5</string>
    <string name="question1">Question %d of 5</string>
    <string name="remainingTime1">seconds remaining: %d</string>
    <string name="remainingTime">The remaining time: 30 s</string>
    <string name="timeEnd">Time Expires!</string>
    <string name="correctAns">Answer is correct!</string>
    <string name="incorrectAns">Answer is incorrect!</string>
    <string name="wrongUserId">The user has been registered!</string>
    <string name="questionFormat" formatted="false">%d. %s\n
        \t\tA. %s  \n
        \t\tB. %s   \n
        \t\tC. %s    \n
        \t\tD. %s
    </string>
    <string name="modelQuestion">31. Who is the next president of USA? \n
        \t\tA. Hillary  \n
        \t\tB. Triump   \n
        \t\tC. Obama    \n
        \t\tD. Clinton
    </string>
    <string name="incorrectUserID">Incorrect userId or Password</string>
    <string name="yourAnswer">Your answer is:</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="next" />
    <string name="next1">Next</string>
    <string name="title_activity_performance">PerformanceActivity</string>
    <string name="thanks">Thank you for accomplishing quiz!</string>
    <string name="score">Your score is:</string>
    <string name="finalScore">%.2f%%</string>
    <string name="try1">Try more quiz</string>
    <string name="LogOut">Logout</string>
    <string name="title_activity_welcome1">Welcome</string>
    <string name="title_activity_quiz_taker1">QuizTaker</string>
    <string name="title_activity_quiz_master1">QuizMaster</string>
    <string name="title_activity_manage_quiz_taker1">ManageQuizTaker</string>
    <string name="title_activity_add_quiz1">addQuiz</string>
    <string name="title_activity_do_quiz1">DoQuiz</string>
    <string name="title_activity_performance1">Performance</string>
</resources>
