<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_do_quiz1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uwaterloo.quiz_system.DoQuiz1Activity"
    tools:showIn="@layout/activity_do_quiz1"
    android:orientation="vertical"
    android:background="@color/A100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:text="@string/question0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionNumber"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/lime_900"/>

        <TextView
            android:text="@string/remainingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/remainingTime"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/lime_900"/>

        <TextView
            android:text="@string/modelQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionOption"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin_middle"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="textStart"/>

        <TextView
            android:text="@string/yourAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/yourAnswer"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="start"
            android:textSize="18sp"
            android:textColor="@color/lime_900"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/radio_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/radio_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/radio_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/radio_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"
                android:layout_weight="1"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerTextView"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="@dimen/answer_size"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"/>

        <Button
            android:text="@string/next1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNext"
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/button_space"
            android:layout_marginRight="@dimen/button_space"
            android:background="@color/A200" />

    </LinearLayout>


</ScrollView>
