<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome1_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uwaterloo.quiz_system.Welcome1Activity"
    tools:showIn="@layout/activity_welcome1"
    android:orientation="vertical"
    android:background="@color/A100"
    android:layout_below="@+id/toolbar">

    <TextView
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/spacing"
        android:textSize="20sp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"/>

    <TextView
        android:text="@string/loginAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginAs"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"
        android:layout_marginBottom="@dimen/spacing"
        android:textSize="20sp"
        />

    <Button
        android:text="@string/qm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonQmLogin"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginLeft="@dimen/button_space"
        android:layout_marginRight="@dimen/button_space"
        android:background="@color/lime_500" />

    <Button
        android:text="@string/qt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonQTLogin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/button_space"
        android:layout_marginRight="@dimen/button_space"
        android:background="@color/lime_500" />

</LinearLayout>
