<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_quiz_taker1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uwaterloo.quiz_system.QuizTaker1Activity"
    tools:showIn="@layout/activity_quiz_taker1"
    android:orientation="vertical"
    android:background="@color/A100">

    <TextView
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeQuizMaster"
        android:layout_marginBottom="@dimen/activity_vertical_margin_middle"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userIdLinearLayout"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:text="@string/UerID"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/qtLoginUserId"
            android:layout_weight="1"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/idHint"
            android:background="@drawable/edit_text_style"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userIdLinearLayout1"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:ems="10"
            android:id="@+id/qtLoginPassword"
            android:layout_weight="1"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/passwordHint"
            android:background="@drawable/edit_text_style"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </LinearLayout>

    <Button
        android:text="@string/login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonUserLogin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/button_space"
        android:layout_marginRight="@dimen/button_space"
        android:background="@color/A200" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/warning"
        android:textColor="@color/incorrect_answer"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="@dimen/warning_size"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"/>


</LinearLayout>
