<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_performance1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uwaterloo.quiz_system.Performance1Activity"
    tools:showIn="@layout/activity_performance1"
    android:orientation="vertical"
    android:background="@color/A100">

    <TextView
        android:text="@string/thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewThanks"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/lime_900"/>

    <TextView
        android:text="@string/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewScore"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="start"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/performanceTextView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="@dimen/answer_size"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

    <Button
        android:text="@string/try1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonTry"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/button_space"
        android:layout_marginRight="@dimen/button_space"
        android:background="@color/A200" />

    <Button
        android:text="@string/LogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogOut"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/button_space"
        android:layout_marginRight="@dimen/button_space"
        android:background="@color/A200" />



</LinearLayout>
